--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,10 @@
 <input id=0 value=0> = xp <input onclick=calculate() type=button value=Calculate>
 <hr>
 
+<b>Custom:</b><br>
+xp / <input id=custom value=0> = <span id=custom-span></span>%
+<hr>
+
 <b>Diablo 2</b> and <b>Diablo 2: Lord of Destruction</b>:
 <pre>xp / 3837739017 = <span id=1></span>% of 99</pre>
 <hr>
