added hotkey display

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <link href=css/style.css rel=stylesheet>
 
 <b>Experience Calculator</b><br>
-<input id=0 value=0> = xp <input onclick=calculate() type=button value=Calculate>
+<input id=0 value=0> = xp <input onclick=calculate() type=button value="Calculate [ENTER]">
 <hr>
 
 <b>Custom:</b><br>
