--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,6 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>ExperienceCalculator</title>
-<link href=css/style.css rel=stylesheet>
 
 <b>Experience Calculator</b><br>
 <input id=0 value=0> = xp <input onclick=calculate() type=button value="Calculate [ENTER]">
@@ -33,4 +32,4 @@ xp /   24066600 = <span id=9></span>% of 80
 xp /   38595400 = <span id=10></span>% of 85
 xp /  149375400 = <span id=11></span>% of 90</pre>
 
-<script src=js/xp.js></script>
+<script src=js/experiencecalculator.js></script>
