--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,8 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>ExperienceCalculator</title>
+<title>ExperienceCalculator.htm</title>
 
-<b>Experience Calculator</b><br>
+<b>Experience Calculator.htm</b><br>
 <input id=0 value=0> = xp <input onclick=calculate() type=button value="Calculate [ENTER]">
 <hr>
 
