added dark theme

--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>ExperienceCalculator.htm</title>
+<link href=css/experiencecalculator.css rel=stylesheet>
 
 <b>Experience Calculator.htm</b><br>
 <input id=0 value=0> = xp <input onclick=calculate() type=button value="Calculate [ENTER]">
