fixed title and custom xp styling

--- a/index.htm
+++ b/index.htm
@@ -3,12 +3,12 @@
 <title>ExperienceCalculator.htm</title>
 <link href=css/experiencecalculator.css rel=stylesheet>
 
-<b>Experience Calculator.htm</b><br>
+<b>ExperienceCalculator.htm</b><br>
 <input id=0 value=0> = xp <input onclick=calculate() type=button value="Calculate [ENTER]">
 <hr>
 
 <b>Custom:</b><br>
-xp / <input id=custom value=0> = <span id=custom-span></span>%
+<pre>xp / <input id=custom value=0> = <span id=custom-span></span>%</pre>
 <hr>
 
 <b>Diablo 2</b> and <b>Diablo 2: Lord of Destruction</b>:
