--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,6 @@
 <!doctype html>
 <meta charset=utf-8>
+<meta content="width=device-width,initial-scale=1" name=viewport>
 <title>ExperienceCalculator.htm</title>
 <link href=css/experiencecalculator.css rel=stylesheet>
 
