replaced = xp with xp =

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 <link href=css/experiencecalculator.css rel=stylesheet>
 
 <b>ExperienceCalculator.htm</b><br>
-<input id=xp value=0> = xp <input onclick=calculate() type=button value="Calculate [ENTER]">
+xp = <input id=xp value=0><input onclick=calculate() type=button value="Calculate [ENTER]">
 <hr>
 
 <b>Custom:</b><br>
