removed unnecessary br

--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 xp = <input id=xp value=0><input onclick=calculate() type=button value="Calculate [ENTER]">
 <hr>
 
-<b>Custom:</b><br>
+<b>Custom:</b>
 <pre>xp / <input id=custom value=0> = <span id=custom-span></span>%</pre>
 <hr>
 
