--- a/index.htm
+++ b/index.htm
@@ -4,18 +4,17 @@
 <title>ExperienceCalculator.htm</title>
 <link href=css/experiencecalculator.css rel=stylesheet>
 
-<b>ExperienceCalculator.htm</b><br>
 xp = <input id=xp value=0><input onclick=calculate() type=button value="Calculate [ENTER]">
-<hr>
 
+<hr>
 <b>Custom:</b>
 <pre>xp / <input id=custom value=0> = <span id=custom-span></span>%</pre>
-<hr>
 
+<hr>
 <b>Diablo 2</b> and <b>Diablo 2: Lord of Destruction</b>:
-<pre>xp / 3837739017 = <span id=d2lod-99></span>% of 99</pre>
-<hr>
+<pre>xp / 3837739017 = <span id=d2lod-99></span>% of level 99</pre>
 
+<hr>
 <b>RuneScape</b>:
 <pre>xp /   13034431 = <span id=rs-99></span>% of level 99
 xp /  104273167 = <span id=rs-120></span>% of level 120
