--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@ xp = <input id=xp value=0><input onclick=calculate() type=button value="Calculat
 
 <hr>
 <b>Custom:</b>
-<pre>xp / <input id=custom value=0> = <span id=custom-span></span>%</pre>
+<pre>xp / <input id=custom-xp value=0> = <span id=custom></span>%</pre>
 
 <hr>
 <b>Diablo 2</b> and <b>Diablo 2: Lord of Destruction</b>:
