added common settings.js usage

--- a/index.htm
+++ b/index.htm
@@ -22,4 +22,5 @@ xp / 5200000000 = <span id=rs-p2p></span>% of Max Total Member Experience</pre>
 </div>
 
 <script src=../common/js/input.js></script>
+<script src=../common/js/settings.js></script>
 <script src=js/experiencecalculator.js></script>
