--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 <link href=../common/css/dom.css rel=stylesheet>
 
 <div class=left>
-    xp = <input id=xp value=0><input onclick=calculate() type=button value="Calculate [ENTER]">
+    xp = <input id=xp value=0>
     <hr>
     <b>Custom:</b>
     <pre>xp / <input id=custom-xp value=0> = <span id=custom></span>%</pre>
@@ -21,6 +21,5 @@ xp / 3200003880 = <span id=rs-f2p></span>% of Max Total F2P Experience
 xp / 5200000000 = <span id=rs-p2p></span>% of Max Total Member Experience</pre>
 </div>
 
-<script src=../common/js/input.js></script>
 <script src=../common/js/settings.js></script>
 <script src=js/experiencecalculator.js></script>
