removed unnecessary value set

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 <link href=../common/css/dom.css rel=stylesheet>
 
 <div class=left>
-    xp = <input id=xp value=0>
+    xp = <input id=xp>
     <hr>
     <b>Custom:</b>
     <pre>xp / <input id=custom-xp value=0> = <span id=custom></span>%</pre>
