--- a/index.htm
+++ b/index.htm
@@ -7,13 +7,13 @@
 <div class=left>
     xp = <input id=xp>
     <hr>
-    <b>Custom:</b>
+    Custom:
     <pre>xp / <input id=custom-xp value=0> = <span id=custom></span>%</pre>
     <hr>
-    <b>Diablo 2</b> and <b>Diablo 2: Lord of Destruction</b>:
+    Diablo 2 and Diablo 2: Lord of Destruction:
     <pre>xp / 3837739017 = <span id=d2lod-99></span>% of level 99</pre>
     <hr>
-    <b>RuneScape</b>:
+    RuneScape:
     <pre>xp /   13034431 = <span id=rs-99></span>% of level 99
 xp /  104273167 = <span id=rs-120></span>% of level 120
 xp /  200000000 = <span id=rs-max></span>% of Max Experience in any Skill
