--- a/index.htm
+++ b/index.htm
@@ -21,5 +21,5 @@ xp / 3200003880 = <span id=rs-f2p></span>% of Max Total F2P Experience
 xp / 5200000000 = <span id=rs-p2p></span>% of Max Total Member Experience</pre>
 </div>
 
-<script src=../common/js/settings.js></script>
+<script src=../common/js/storage.js></script>
 <script src=js/experiencecalculator.js></script>
