improved formatting and localStorage usage

--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
     <td>Percentage
   <tr>
     <td>Custom
-    <td>XP / <input id=custom-xp value=0>
+    <td>XP / <input id=custom-xp>
     <td><span id=custom></span>%
   <tr class=header>
     <td>Diablo 2
