--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 
 <table>
   <tr>
-    <td>XP
+    <td>Experience
     <td colspan=2><input id=xp>
   <tr class=header>
     <td>Other
@@ -14,7 +14,7 @@
     <td>Percentage
   <tr>
     <td>Custom
-    <td>XP / <input id=custom-xp>
+    <td><input id=custom-xp>
     <td><span id=custom></span>%
   <tr class=header>
     <td>Diablo 2
@@ -22,7 +22,7 @@
     <td>Percentage
   <tr>
     <td>Level 99
-    <td>XP / 3,837,739,017
+    <td>3,837,739,017
     <td><span id=d2lod-99></span>%
   <tr class=header>
     <td>RuneScape
@@ -30,23 +30,23 @@
     <td>Percentage
   <tr>
     <td>99
-    <td>XP / 13,034,431
+    <td>13,034,431
     <td><span id=rs-99></span>%
   <tr>
     <td>120
-    <td>XP / 104,273,167
+    <td>104,273,167
     <td><span id=rs-120></span>%
   <tr>
-    <td>Max Experience in any Skill
-    <td>XP / 200,000,000
+    <td>Max Skill Experience
+    <td>200,000,000
     <td><span id=rs-max></span>%
   <tr>
-    <td>Max Total F2P Experience
-    <td>XP / 3,200,003,880
+    <td>Max F2P Experience
+    <td>3,200,003,880
     <td><span id=rs-f2p></span>%
   <tr>
-    <td>Max Total Member Experience
-    <td>XP / 5,200,000,000
+    <td>Max Member Experience
+    <td>5,200,000,000
     <td><span id=rs-p2p></span>%
 </table>
 
