--- a/index.htm
+++ b/index.htm
@@ -52,4 +52,4 @@
 </table>
 
 <script src=../common/js/core.js></script>
-<script src=js/experiencecalculator.js></script>
+<script src=js/main.js></script>
